--- a/index.html
+++ b/index.html
@@ -7,7 +7,15 @@
   <link rel="stylesheet" href="miestilos.css" />
 </head>
 <body>
-  <h2>Calculadora de Ausentismo por Accidentes de Trabajo</h2>
+  <div class="header">
+  <img
+    src="imagenes/LOGO_CORREO_ARGENTINO.png"
+    alt="Correo Argentino"
+    class="logo"
+  />
+  <h2>Calculadora de Ausentismo </h2>
+</div>
+
 
   <form id="ausentismoForm">
     <label for="region">Región / Sucursal:</label>
