--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <label for="diasLaborables">Días laborables del período:</label>
     <input type="number" id="diasLaborables" required />
 
-    <label for="diasPerdidos">Días perdidos por accidentes:</label>
+    <label for="diasPerdidos">Días perdidos por licencia medica:</label>
     <input type="number" id="diasPerdidos" required />
 
    <button type="button" onclick="calcularAusentismo()">Calcular y Guardar</button>
